HomeWork 7 fix
*rename classes
*using iso for LocalDate
*fix log information
*fix tests